# TrajGen

./: .gitignore  Dockerfile.app  LICENSE  README.md  evaluate.py  pyproject.toml  visualize.py
assets/: trajectory_methods_20260221_061734_config_Constrained Random.json  trajectory_methods_20260221_061734_config_Environment Weighted.json  trajectory_methods_20260221_061734_config_Freespace.json  trajectory_methods_20260221_061734_config_OSM Sampling.json  trajectory_methods_20260221_061734_config_Physics Based.json
examples/: generate_visualize.py  physics_demo.py
src/app/: app.py  config.py  test_frontend_config.py
src/app/src/: _1_point_properties.py  _2_spatial_method.py  _3_temporal_method.py  _4_resampling_method.py  _5_preview.py  _6_generate.py  __init__.py  _footer.py  _header.py  method_overview.py
src/trajgen/: app.py  config.py  point_generator.py  relevant_properties.py  trajectory.py  trajectory_generator.py
src/trajgen/combined_strategy/: __init__.py  combined_strategy.py  physics_informed.py
tests/: test_evaluator.py  test_point_generator.py  test_trajectory.py  test_trajectory_generator.py  test_trajectory_strategy.py
tests/combined_strategy/: test_physics_informed.py
tests/resampling_strategy/: test_length.py  test_spatial_step.py  test_temporal_step.py
tests/spatial_strategy/: test_equal_distribution.py  test_freespace.py  test_osm_sampling.py  test_polynomial_curves.py  test_random_walk.py
tests/temporal_strategy/: test_acceleration.py  test_fixed_time.py  test_timesteps.py  test_velocity.py
tests/tmp/: dataset.txt
(+37 files in other folders)
