[project]
name = "trajgen"
version = "0.1.0"
description = "A Python package for generating, manipulating, and visualizing synthetic trajectory datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.8",
    "osmnx>=2.0.7",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "scipy>=1.15.3",
    "shapely>=2.1.2",
    "streamlit>=1.54.0",
    "streamlit-folium>=0.26.1",
]
